--- a/src/app/student-detail/student-detail.component.html
+++ b/src/app/student-detail/student-detail.component.html
@@ -5,4 +5,5 @@
     <input [(ngModel)]="student.name" placeholder="name">
     </label>
 </div>
+<button (click)="goBack()">go back</button>
 </div>
