--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,8 +1,8 @@
 <h2>Students</h2>
   <ul class="students">
-    <li *ngFor="let student of students" (click)="onSelect(student)" [class.selected]="student === selectedStudent">
+    <li *ngFor="let student of students" >
+      <a routerLink="/detail/{{student.id}}">
       <span class="badge">{{student.id}}</span> {{student.name}}
+    </a>
     </li>
   </ul>
-
-<app-student-detail [student]="selectedStudent"></app-student-detail>
