--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="grid grid-pad">
   <a *ngFor="let student of students" class="col-1-4" routerLink="/detail/{{student.id}}">
     <div class="module student">
-      <h4>{{student.name}}</h4>
+      <h4>{{student.nombre}}</h4>
     </div>
   </a>
 </div>
