--- a/src/app/student-detail/student-detail.component.html
+++ b/src/app/student-detail/student-detail.component.html
@@ -2,7 +2,7 @@
 <h2>{{student.name | uppercase }} Details</h2>
 <div><span>id: </span>{{student.id}}</div>
 <div><label>name:
-    <input [(ngModel)]="student.name" placeholder="name">
+    <input [(ngModel)]="student.nombre" placeholder="name">
     </label>
 </div>
 <button (click)="goBack()">go back</button>
