--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -2,7 +2,7 @@
   <ul class="students">
     <li *ngFor="let student of students" >
       <a routerLink="/detail/{{student.id}}">
-      <span class="badge">{{student.id}}</span> {{student.name}}
+      <span class="badge">{{student.id}}</span> {{student.nombre}}
     </a>
     </li>
   </ul>
