--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>List students by type</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let student of students" class="col-1-4" routerLink="/detail/{{student.id}}">
+  <a *ngFor="let type of types" class="col-1-4" routerLink="/detail/{{type}}">
     <div class="module student">
-      <h4>{{student.nombre}}</h4>
+      <h4>{{type}}</h4>
     </div>
   </a>
 </div>
