--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>List students by type</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let type of types" class="col-1-4" routerLink="/detail/{{type}}">
+  <a *ngFor="let type of types" class="col-1-4" routerLink="/students/{{type}}">
     <div class="module student">
       <h4>{{type}}</h4>
     </div>
