--- a/src/app/student-detail/student-detail.component.css
+++ b/src/app/student-detail/student-detail.component.css
@@ -1,10 +1,30 @@
 /* HeroDetailComponent's private CSS styles */
-label {
+.students {
+  margin: 0 0 0.8em 0;
+  list-style-type: none;
+    background-color: #C0C0C0;
+    border-radius: 4px 0 0 4px;
+  padding: 0;
+  width: 15em;
+  height: 1.8em;
+}
+.students .text {
+  position: relative;
+  top: -3px;
+}
+.students .badge {
   display: inline-block;
-  width: 3em;
-  margin: .5em 0;
-  color: #607D8B;
-  font-weight: bold;
+  font-size: small;
+  padding: 0.8em 0.7em 0 0.7em;
+  background-color: #B4DDF2;
+  line-height: 1em;
+  position: relative;
+  left: -1px;
+  top: -4px;
+  height: 1.8em;
+  width: 3.8em;
+  margin-right: .8em;
+  border-radius: 4px 0 0 4px;
 }
 input {
   height: 2em;
